config-root/namespaces/jx-production/jx3-gohttp-3/jx3-gohttp-3-jx3-gohttp-3-deploy.yaml
# Source: jx3-gohttp-3/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-gohttp-3-jx3-gohttp-3
  labels:
    draft: draft-app
    chart: "jx3-gohttp-3-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-gohttp-3-jx3-gohttp-3
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-gohttp-3-jx3-gohttp-3
    spec:
      serviceAccountName: jx3-gohttp-3-jx3-gohttp-3
      containers:
        - name: jx3-gohttp-3
          image: "10.106.184.79/piontec/jx3-gohttp-3:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
