config-root/namespaces/jx-production/jx3-gohttp-3/jx3-gohttp-3-ingress.yaml
# Source: jx3-gohttp-3/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx3-gohttp-3
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jx3-gohttp-3
              servicePort: 80
      host: jx3-gohttp-3-jx-production.192.168.39.213.nip.io
